[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "18.0.0"
prost = "0.11.6"
substreams.workspace = true
substreams-ethereum.workspace = true
thiserror = "1.0.38"

[build-dependencies]
anyhow = "1.0.69"
