[package]
name = "safe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "safe"
crate-type = ["cdylib"]

[dependencies]
hex-literal = "0.3.4"
substreams.workspace = true
substreams-ethereum.workspace = true
common = { version = "0.1.0", path = "../common" }
prost = "0.11.6"
ethabi = "18.0.0"
num-bigint = "0.4.3"
tiny-keccak = "2.0.2"

[build-dependencies]
anyhow = "1.0.69"
common = { version = "0.1.0", path = "../common" }
